--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <button id="Start">Start</button>
+    <button id="start">Start</button>
 
     <script type="text/javascript" src="js.js"></script>
 </body>
